<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".presentation.fragments.intruder.IntruderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIntruder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundSecondary"
                android:clipToPadding="false"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/theme"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTheme">

                    <RadioButton
                        android:id="@+id/radio_light_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/light_mode"
                        android:textColor="@color/textColorSecondary" />

                    <RadioButton
                        android:id="@+id/radio_dark_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/dark_mode"
                        android:textColor="@color/textColorSecondary" />
                </RadioGroup>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radio_group" />

                <TextView
                    android:id="@+id/tvAlarmTone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/alarm_tone"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/tvToneValue"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <TextView
                    android:id="@+id/tvToneValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="end"
                    android:hint="@string/emergency_siren"
                    android:padding="8dp"
                    android:textColor="@color/textColorSecondary"
                    app:drawableEndCompat="@drawable/ic_arrow_forward"
                    app:drawableTint="@color/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAlarmTone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvAlarmTone"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvToneValue" />

                <TextView
                    android:id="@+id/tvPinCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/pin_code"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/tvPinCodeValue"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/tvPinCodeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end"
                    android:hint="****"
                    android:padding="8dp"
                    android:textColor="@color/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPinCode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvPinCode"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPinCode" />

                <TextView
                    android:id="@+id/tvEnableAlarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/enable_alarm"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxAlarm"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

                <CheckBox
                    android:id="@+id/checkBoxAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tvEnableAlarm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvEnableAlarm"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

                <TextView
                    android:id="@+id/tvSelfie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/email_intruder_selfie"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxSelfie"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEnableAlarm" />

                <CheckBox
                    android:id="@+id/checkBoxSelfie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSelfie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvSelfie"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxAlarm" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/email_intruder_location"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxLocation"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelfie" />

                <CheckBox
                    android:id="@+id/checkBoxLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvLocation"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxSelfie" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>