<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.intruder.IntruderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundSecondary"
                android:clipToPadding="false"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/intruder_alert_info"
                    android:drawablePadding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/ic_info"
                    app:drawableTint="@color/purple_200" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIntruder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundSecondary"
                android:clipToPadding="false"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvAlarmTone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/disabled"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/tvToneValue"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/tvToneValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchStyle"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAlarmTone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvAlarmTone"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvToneValue" />

                <TextView
                    android:id="@+id/tvEnableAlarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/enable_alarm"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxAlarm"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <CheckBox
                    android:id="@+id/checkBoxAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvEnableAlarm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvEnableAlarm"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/tvSelfie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/email_intruder_selfie"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxSelfie"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEnableAlarm" />

                <CheckBox
                    android:id="@+id/checkBoxSelfie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSelfie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvSelfie"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxAlarm" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/email_intruder_location"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toStartOf="@+id/checkBoxLocation"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelfie" />

                <CheckBox
                    android:id="@+id/checkBoxLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvLocation"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxSelfie" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxLocation" />

                <TextView
                    android:id="@+id/unlockCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/failed_attempt_summary"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

                <SeekBar
                    android:id="@+id/seekBarFailedAttempts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:max="4"
                    android:progress="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/unlockCountText" />

                <TextView
                    android:id="@+id/tvPinInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email_info"
                    android:textColor="@color/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarFailedAttempts" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_hint"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPinInfo">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@null"
                        android:textColor="@color/textColor"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnIntruderSelfie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/intruders"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>